--- a/roles/cleversite/codes/templates/nginx.conf.j2
+++ b/roles/cleversite/codes/templates/nginx.conf.j2
@@ -29,8 +29,8 @@ server {
 
 	location	/ {
 			include			proxy_params;
-			proxy_send_timeout	900;
-			proxy_read_timeout	900;
+			#proxy_send_timeout	900;
+			#proxy_read_timeout	900;
 			proxy_pass		http://codes;
 			proxy_http_version	1.1;
 			proxy_set_header	Upgrade		$http_upgrade;
