--- a/roles/cleversite/web/templates/crontab.j2
+++ b/roles/cleversite/web/templates/crontab.j2
@@ -1,15 +1,9 @@
-{% for item in cronjobs %}
-    {% set log = "/dev/null" %}
-    {% if 'log' in item %}
-        {% set log = item.log %}
-    {% endif %}
-    {%if item.is_command %}
-        # {{item.description}}
-        {{item.minute | default('*')}} {{item.hour | default('*')}}   {{item.day | default('*')}} {{item.month | default('*')}} {{item.weekday | default('*')}}    {{item.script}} >> {{log}}
-        {{item.script}} >> {{log}}
+{% for item in cronjobs %}    
+    {%if "is_command" in item and item.is_command %}
+        {% set command_prefix = "" %}
     {% else %}
-        # {{item.description}}
-        {{item.minute | default('*')}} {{item.hour | default('*')}}   {{item.day | default('*')}} {{item.month | default('*')}} {{item.weekday | default('*')}}    php {{app_base_path}}/{{item.script}} >> {{log}}
-        php {{app_base_path}}/{{item.script}} >> {{log}}
+        {% set command_prefix = "php " ~ app_base_path %}
     {% endif %}
+# {{item.description}}
+{{item.minute | default('*')}} {{item.hour | default('*')}}   {{item.day | default('*')}} {{item.month | default('*')}} {{item.weekday | default('*')}}   {{command_prefix}}{{item.script}} >> {{item.log | default("/dev/null") }}
 {% endfor %}
